# ruchat_backend

./: .env  Cargo.toml  Dockerfile  README.md  configuration.yaml  psql_init.sh  sqlx-data.json
migrations/: 20210430190540_create_servers_table.sql
src/: configuration.rs  lib.rs  main.rs  run.rs  telemetry.rs
src/routes/: mod.rs  server.rs
src/tests/: health_check.rs
