[package]
name = "ruchat_backend"
version = "0.1.0"
authors = ["TheWolfInstinct <fixer3838@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
config = "0.11.0"
serde = { version = "1.0.125", features = ["derive"] }
sqlx = { version = "0.5.2", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
