[package]
name = "ruchat_backend"
version = "0.1.0"
authors = ["TheWolfInstinct <fixer3838@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
config = "0.11.0"
serde = { version = "1.0.125", features = ["derive"] }
sqlx = { version = "0.5.2", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = "1.5.0"
uuid = { version = "0.8.1", features = ["v4"] }
reqwest = { version = "0.11.3", features = ["json"]}
actix-rt = "2.2.0"
chrono = "0.4.19"
tracing = { version = "0.1.26", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.4"
tracing-log = "0.1.2"
once_cell = "1.7.2"
tracing-actix-web = "0.3.0-beta.2"

[dev-dependencies]
once_cell = "1.7.2"
